# iam-sdk-python

./: Makefile  README.md  pyproject.toml
.github/workflows/: dependency_track_dev.yml  dependency_track_prod.yml  pull_request.yml  release.yml
docs/: example.md  using_iam_api.md
iam_authn_sdk_python/: __init__.py  api.py  client.py  config.py  exceptions.py
iam_sdk/: __init__.py  api.py  config.py  exceptions.py
iam_sdk/domain/: client_repository.py
iam_sdk/services/: iam.py
iam_sdk_python/: __init__.py  api.py  config.py  context.py
tests/: test_api.py  test_iam_service.py
tests/patches/: api.py  http.py
