[tool.poetry]
name = "iam-sdk-python"
version = "0.1.0"
description = "SDK for IAM "
authors = []
readme = "README.md"
packages = [{include = "iam_sdk"}]

[tool.poetry.dependencies]
python = "3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
