[project]
name = "iam-sdk-python"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry]
name = "iam-sdk-python"
version = "0.1.3"
description = "SDK for IAM "
authors = []
readme = "README.md"
packages = [{include = "iam_sdk"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
